# otus_algo_03

./: CMakeLists.txt  README.md
src/: bishopmoves.h  kingmoves.h  knightmoves.h  main.cpp  queenmoves.h  rookmoves.h  tester.h
